[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontMedium.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontIngame.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/DotRed.png" type="Texture" id=3]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Scripts/TrainInfo.gd" type="Script" id=4]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/DotGreen.png" type="Texture" id=5]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Scripts/InputLabel.gd" type="Script" id=6]

[node name="TrainInfo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.950073
margin_top = 0.949997
margin_right = -0.950073
margin_bottom = 0.950012
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -394.0
margin_top = 24.0
margin_right = 384.0
margin_bottom = 573.0
color = Color( 0.0352941, 0.0823529, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -381.0
margin_top = 37.0
margin_right = 372.0
margin_bottom = 565.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 753.0
margin_bottom = 528.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadLine" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 753.0
margin_bottom = 45.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HeadLine"]
margin_right = 229.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 1 )
text = "TRAIN_INFORMATION"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/HeadLine"]
margin_left = 233.0
margin_top = 7.0
margin_right = 753.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "PRESS_F2_TO_CLOSE"
align = 2
script = ExtResource( 6 )
actions = [ "trainInfoAbove" ]

[node name="Pantograpgh" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 753.0
margin_bottom = 79.0

[node name="dot" type="TextureRect" parent="ScrollContainer/VBoxContainer/Pantograpgh"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Pantograpgh"]
margin_left = 34.0
margin_right = 753.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "TRAIN_INFO_PANTOGRAPH"
autowrap = true
script = ExtResource( 6 )
actions = [ "pantograph" ]

[node name="Engine" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 753.0
margin_bottom = 113.0

[node name="dot" type="TextureRect" parent="ScrollContainer/VBoxContainer/Engine"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Engine"]
margin_left = 34.0
margin_right = 181.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
text = "TRAIN_INFO_ENGINE"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
actions = [ "engine" ]

[node name="SiFa" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 117.0
margin_right = 753.0
margin_bottom = 147.0

[node name="dot" type="TextureRect" parent="ScrollContainer/VBoxContainer/SiFa"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/SiFa"]
margin_left = 34.0
margin_right = 753.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "TRAIN_INFO_SIFA"
autowrap = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
actions = [ "SiFa" ]

[node name="EnforcedBreaking" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 151.0
margin_right = 753.0
margin_bottom = 181.0

[node name="dot" type="TextureRect" parent="ScrollContainer/VBoxContainer/EnforcedBreaking"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/EnforcedBreaking"]
margin_left = 34.0
margin_right = 753.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "TRAIN_INFO_ENFORCED_BREAKING"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Brakes-0" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 185.0
margin_right = 753.0
margin_bottom = 215.0
rect_clip_content = true

[node name="dot" type="TextureRect" parent="ScrollContainer/VBoxContainer/Brakes-0"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Brakes-0"]
margin_left = 34.0
margin_right = 753.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
rect_clip_content = true
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "TRAIN_INFO_BRAKES_1"
autowrap = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
actions = [ "brake-", "brake+" ]

[node name="Brakes-1" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 219.0
margin_right = 753.0
margin_bottom = 249.0

[node name="dot" type="TextureRect" parent="ScrollContainer/VBoxContainer/Brakes-1"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Brakes-1"]
margin_left = 34.0
margin_right = 753.0
margin_bottom = 30.0
rect_clip_content = true
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "TRAIN_INFO_BRAKES_2"
autowrap = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
actions = [ "brake-", "brake+" ]

[node name="Doors" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 253.0
margin_right = 753.0
margin_bottom = 283.0

[node name="dot" type="TextureRect" parent="ScrollContainer/VBoxContainer/Doors"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Doors"]
margin_left = 34.0
margin_right = 179.0
margin_bottom = 30.0
rect_clip_content = true
custom_fonts/font = ExtResource( 2 )
text = "TRAIN_INFO_DOORS"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
actions = [ "doorClose", "doorRight", "doorLeft" ]

[node name="Acceleration-0" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 287.0
margin_right = 753.0
margin_bottom = 317.0

[node name="dot" type="TextureRect" parent="ScrollContainer/VBoxContainer/Acceleration-0"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Acceleration-0"]
margin_left = 34.0
margin_right = 753.0
margin_bottom = 30.0
rect_clip_content = true
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "TRAIN_INFO_ACCELERATION_1"
autowrap = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
actions = [ "acc+", "acc-" ]

[node name="Acceleration-1" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 321.0
margin_right = 753.0
margin_bottom = 351.0

[node name="dot" type="TextureRect" parent="ScrollContainer/VBoxContainer/Acceleration-1"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Acceleration-1"]
margin_left = 34.0
margin_right = 753.0
margin_bottom = 30.0
rect_clip_content = true
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "TRAIN_INFO_ACCELERATION_2"
autowrap = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
actions = [ "acc+", "acc-" ]

[node name="ColorRect2" type="ColorRect" parent="ScrollContainer/VBoxContainer"]
margin_top = 355.0
margin_right = 753.0
margin_bottom = 358.0
rect_min_size = Vector2( 0, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Horn" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 362.0
margin_right = 753.0
margin_bottom = 392.0

[node name="dot" type="TextureRect" parent="ScrollContainer/VBoxContainer/Horn"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Horn"]
margin_left = 34.0
margin_right = 753.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "TRAIN_INFO_HORN"
autowrap = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
actions = [ "Horn" ]

[node name="FrontLight" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 396.0
margin_right = 753.0
margin_bottom = 426.0

[node name="dot" type="TextureRect" parent="ScrollContainer/VBoxContainer/FrontLight"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/FrontLight"]
margin_left = 34.0
margin_right = 753.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "TRAIN_INFO_FRONT_LIGHT"
autowrap = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
actions = [ "FrontLight" ]

[node name="InsideLight" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 430.0
margin_right = 753.0
margin_bottom = 460.0

[node name="dot" type="TextureRect" parent="ScrollContainer/VBoxContainer/InsideLight"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/InsideLight"]
margin_left = 34.0
margin_right = 753.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "TRAIN_INFO_CABIN_LIGHT"
autowrap = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
actions = [ "InsideLight" ]

[node name="Autopilot" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 464.0
margin_right = 753.0
margin_bottom = 494.0

[node name="dot" type="TextureRect" parent="ScrollContainer/VBoxContainer/Autopilot"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Autopilot"]
margin_left = 34.0
margin_right = 753.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "TRAIN_INFO_AUTOPILOT"
autowrap = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
actions = [ "autopilot" ]
